--- a/java script chapter 21-42/index.html
+++ b/java script chapter 21-42/index.html
@@ -10,7 +10,7 @@
     <h1>Java Script Chapter 21 to 42</h1>
     <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Quia, autem amet impedit sunt alias nulla.</p>    
 
-
+    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Id ipsum deleniti, magni voluptatum quibusdam quis nesciunt non eius ipsam minus sequi dicta obcaecati provident illum repudiandae, suscipit unde, in sit.</p>
     <script src="app.js"></script>
 </body>
 </html>
